# az-monitor-py-logging-pkg

./: .env.example  .envrc  .flake8  .gitignore  poetry.toml  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
azfunctionsmonitor/: LoggingHelper.py
src/az_monitor_py_logging/: __init__.py
tests/: test_az_monitor_py_logging.py
